--- a/Lab3calculator/app/src/main/res/layout/activity_main.xml
+++ b/Lab3calculator/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
     <LinearLayout
         android:id="@+id/mainlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <EditText
             android:id="@+id/resultEdit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -28,28 +28,28 @@
             <Button
                 android:id="@+id/btn01"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="1" />
 
             <Button
                 android:id="@+id/btn02"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="2" />
 
             <Button
                 android:id="@+id/btn03"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="3" />
 
             <Button
                 android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="+" />
         </LinearLayout>
@@ -64,28 +64,28 @@
             <Button
                 android:id="@+id/btn04"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="4" />
 
             <Button
                 android:id="@+id/btn05"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="5" />
 
             <Button
                 android:id="@+id/btn06"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="6" />
 
             <Button
                 android:id="@+id/btnMinus"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="-" />
         </LinearLayout>
@@ -100,28 +100,28 @@
             <Button
                 android:id="@+id/btn07"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="7" />
 
             <Button
                 android:id="@+id/btn08"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="8" />
 
             <Button
                 android:id="@+id/btn09"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="9" />
 
             <Button
                 android:id="@+id/btnDivide"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="/" />
         </LinearLayout>
@@ -136,28 +136,28 @@
             <Button
                 android:id="@+id/btnClear"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="c" />
 
             <Button
                 android:id="@+id/btn00"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="0" />
 
             <Button
                 android:id="@+id/btnDot"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="." />
 
             <Button
                 android:id="@+id/btnMultiply"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="*" />
         </LinearLayout>
