added button functions

--- a/Lab3calculator/app/src/main/res/layout/activity_main.xml
+++ b/Lab3calculator/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn01Click"
                 android:text="1" />
 
             <Button
@@ -37,6 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn02Click"
                 android:text="2" />
 
             <Button
@@ -44,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn03Click"
                 android:text="3" />
 
             <Button
@@ -51,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btnAddClick"
                 android:text="+" />
         </LinearLayout>
 
@@ -66,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn04Click"
                 android:text="4" />
 
             <Button
@@ -73,6 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn05Click"
                 android:text="5" />
 
             <Button
@@ -80,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn06Click"
                 android:text="6" />
 
             <Button
@@ -87,6 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btnMinusClick"
                 android:text="-" />
         </LinearLayout>
 
@@ -102,6 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn07Click"
                 android:text="7" />
 
             <Button
@@ -109,6 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn08Click"
                 android:text="8" />
 
             <Button
@@ -116,6 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn09Click"
                 android:text="9" />
 
             <Button
@@ -123,6 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btnDivideClick"
                 android:text="/" />
         </LinearLayout>
 
@@ -138,6 +150,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btnClearClick"
                 android:text="c" />
 
             <Button
@@ -145,6 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btn00Click"
                 android:text="0" />
 
             <Button
@@ -152,6 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btnDotClick"
                 android:text="." />
 
             <Button
@@ -159,6 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="btnMultiplyClick"
                 android:text="*" />
         </LinearLayout>
 
@@ -167,6 +183,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:onClick="btnResultClick"
             android:text="=" />
     </LinearLayout>
 
