--- a/Lab3calculator/app/src/main/res/layout/activity_main.xml
+++ b/Lab3calculator/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/resultEdit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="EditText" />
 
         <LinearLayout
             android:id="@+id/ButtonRow01"
